--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
     {{error}}
 {{/if}}
 
-<form method = "post" action = "/login">
+<form method = "post" action = "">
     <input type = "text" name = "username" placeholder = "Username" required> 
     <input type = "password" name = "pw" placeholder = "Password" required>
     <input type = "submit" value = "Log In">
