--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,7 +2,7 @@
     {{error}}
 {{/if}}
 
-<form method = "post" action = "/register">
+<form method = "post" action = "">
     <input type = "text" name = "username" placeholder = "Username" required> 
     <input type = "password" name = "pw" placeholder = "Password" required>
     <input type = "password" name = "pwc" placeholder = "Confirm Password" required>
