Implemented ability to create posts and add comments

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,8 +7,8 @@
         {{user.bio}}
     {{/if}}
 
-    <a href="/logout">Logout</a>
-    <a href="/{{user.username}}/edit">Edit Profile</a>
+    <a href="/u/{{user.username}}">Your Profile</a>
+    <a href="/make-post">Write a Story!</a>
 
 {{else}}
 
