Implemented ability to delete and edit posts

--- a/views/story.hbs
+++ b/views/story.hbs
@@ -1,6 +1,6 @@
 {{#if own}}
-    <a href="/edit/:{{story._id}}">Edit Story</a>
-    <a href="/delete/:{{story._id}}">Delete Story</a>
+    <a href="/edit/{{story._id}}">Edit Story</a>
+    <a href="/delete/{{story._id}}">Delete Story</a>
 {{/if}}
 
 <div>
