--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,6 +19,30 @@
         {{/each}}
     {{/if}}
 
+    {{#if likes.length}}
+        <h2>Liked Posts</h2>
+        {{#each likes}}
+            <div onclick = "location.href = '/story/{{this._id}}';" style="cursor: pointer;">
+                title: {{this.title}}
+                location: {{this.location}}
+                posted on: {{this.timestamp}}
+                likes: {{this.likes.length}}
+            </div>
+        {{/each}}
+    {{/if}}
+
+    {{#if following_posts.length}}
+        <h2>From People You Follow</h2>
+        {{#each following_posts}}
+            <div onclick = "location.href = '/story/{{this._id}}';" style="cursor: pointer;">
+                title: {{this.title}}
+                location: {{this.location}}
+                posted on: {{this.timestamp}}
+                likes: {{this.likes.length}}
+            </div>
+        {{/each}}
+    {{/if}}
+
     <a href="/u/{{user.username}}">Your Profile</a>
     <a href="/make-post">Write a Story!</a>
 
