Implemented ability to delete profile

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,7 +39,7 @@
         {{/each}}
     {{/if}}
 
-    <a href="/u/{{user.username}}">Your Profile</a>
+    <a href="/u/{{user._id}}">Your Profile</a>
     <a href="/make-post">Write a Story!</a>
 
 {{else}}
