--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,6 +4,6 @@
 
 <form method = "post" action = "">
     <input type = "text" name = "username" placeholder = "Username" required> 
-    <input type = "password" name = "pw" placeholder = "Password" required>
+    <input type = "password" name = "password" placeholder = "Password" required>
     <input type = "submit" value = "Log In">
 </form>
