--- a/views/register.hbs
+++ b/views/register.hbs
@@ -4,7 +4,7 @@
 
 <form method = "post" action = "">
     <input type = "text" name = "username" placeholder = "Username" required> 
-    <input type = "password" name = "pw" placeholder = "Password" required>
+    <input type = "password" name = "password" placeholder = "Password" required>
     <input type = "password" name = "pwc" placeholder = "Confirm Password" required>
     <input type = "submit" value = "Register">
 </form>
