--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,26 +1,32 @@
 {{#if user}}
-    <nav>
-        <a href="/following">Following</a>
-        <a href="/discover">Discover</a>
-        <a href="/search">Search</a>
-        <a href="/you">You</a>
+    <nav class="flex space-x-4 mb-4 w-full bg-primary-400 p-[1rem] flex items-center justify-center text-[1.25rem]">
+        <a href="/following" class="text-white font-head font-bold">Following</a>
+        <a href="/discover" class="text-white font-head font-bold">Discover</a>
+        <a href="/search" class="text-white font-head font-bold">Search</a>
+        <a href="/you" class="text-white font-head font-bold">You</a>
     </nav>
-{{/if}}
 
-{{#if user}}
-
-    <h1> Welcome {{user.username}} </h1>
-
-    {{#if user.bio}} 
-        {{user.bio}}
-    {{/if}}
-    
-    <a href="/u/{{user._id}}">Your Profile</a>
-    <a href="/make-post">Write a Story!</a>
+    <a href="/make-post" class="text-primary-500 hover:underline">Write a Story!</a>
 
 {{else}}
 
-    <a href="/register">Register</a>
-    <a href="/login">Login</a>
+<div class="flex h-[calc(100vh-10rem)]">
+    <div class="w-1/2">
+        <img src="/images/landing.jpg" class="object-cover object-center w-full h-full shadow-md">
+    </div>
+
+    <div class="w-1/2 md:w-1/2 p-8 flex items-center">
+        <div class="flex flex-col">
+            <h1 class="text-[3rem] font-head font-bold mb-[2rem]">Inspire. Connect. Celebrate.</h1>
+            <p class="text-[1rem] font-body text-secondary-800 mb-[2rem] pr-[5rem] text-justify">
+                Get ready to dive into a world of inspiration, connection, and celebration—all about the joy of travel! Share your amazing travel tales, connect with like-minded wanderers, and soak up the vibes of unique journeys. It's all about discovering, connecting, and learning from each other's adventures. Let's make travel stories come alive together!
+            </p>
+            <div class="flex">
+                <a href="/register" class="bg-primary-300 hover:bg-primary-400 text-white text-body py-2 px-4 rounded mr-2">Register</a>
+                <a href="/login" class="bg-primary-300 hover:bg-primary-400 text-white text-body py-2 px-4 rounded">Login</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 {{/if}}
