Styled each story page and the home page

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,7 @@
 {{#if own}}
     <a href="/logout">Logout</a>
-    <a href="/{{user.username}}/edit">Edit Profile</a>
-    <a href="/{{user._id}}/delete">Delete Profile</a>
+    <a href="/edit">Edit Profile</a>
+    <a href="/delete">Delete Profile</a>
     <a href="/bookmarked">Bookmarks</a>
     <a href="/liked">Likes</a>
 {{else}}
