--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -536,8 +536,16 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.m-\[0\.25rem\]{
-  margin: 0.25rem;
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.inset-0{
+  inset: 0px;
 }
 
 .m-\[2rem\]{
@@ -548,157 +556,166 @@ video {
   margin: 1rem;
 }
 
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-\[3rem\]{
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-\[10rem\]{
+  margin-left: 10rem;
+  margin-right: 10rem;
+}
+
+.mx-\[15rem\]{
+  margin-left: 15rem;
+  margin-right: 15rem;
 }
 
 .mb-0{
   margin-bottom: 0px;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
 .mb-2{
   margin-bottom: 0.5rem;
 }
 
-.mt-\[0\.25rem\]{
-  margin-top: 0.25rem;
-}
-
-.mt-\[1rem\]{
-  margin-top: 1rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.ml-auto{
-  margin-left: auto;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
-}
-
-.mb-\[1\.5rem\]{
-  margin-bottom: 1.5rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mb-\[2rem\]{
   margin-bottom: 2rem;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-\[1rem\]{
+  margin-top: 1rem;
+}
+
 .mt-\[2rem\]{
   margin-top: 2rem;
 }
 
-.inline-block{
-  display: inline-block;
+.block{
+  display: block;
 }
 
 .flex{
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
 .contents{
   display: contents;
 }
 
-.aspect-auto{
-  aspect-ratio: auto;
+.hidden{
+  display: none;
 }
 
 .h-\[10rem\]{
   height: 10rem;
 }
 
-.h-screen{
-  height: 100vh;
+.h-\[20px\]{
+  height: 20px;
 }
 
-.h-full{
-  height: 100%;
-}
-
-.h-\[calc\(100\%-10rem\)\]{
-  height: calc(100% - 10rem);
+.h-\[5px\]{
+  height: 5px;
 }
 
 .h-\[calc\(100vh-10rem\)\]{
   height: calc(100vh - 10rem);
 }
 
-.min-h-\[50\%\]{
-  min-height: 50%;
-}
-
-.min-h-\[75\%\]{
-  min-height: 75%;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-3\/4{
-  width: 75%;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-1\/3{
-  width: 33.333333%;
+.h-full{
+  height: 100%;
 }
 
 .w-1\/2{
   width: 50%;
 }
 
-.w-\[calc\(100\%-2rem\)\]{
-  width: calc(100% - 2rem);
+.w-1\/3{
+  width: 33.333333%;
 }
 
-.w-\[75\%\]{
-  width: 75%;
+.w-2\/3{
+  width: 66.666667%;
+}
+
+.w-\[10rem\]{
+  width: 10rem;
+}
+
+.w-\[20px\]{
+  width: 20px;
 }
 
 .w-\[50\%\]{
   width: 50%;
 }
 
-.max-w-2xl{
-  max-width: 42rem;
+.w-\[5px\]{
+  width: 5px;
 }
 
-.max-w-sm{
-  max-width: 24rem;
+.w-\[75\%\]{
+  width: 75%;
 }
 
-.max-w-md{
-  max-width: 28rem;
-}
-
-.max-w-3xl{
-  max-width: 48rem;
-}
-
-.flex-grow{
-  flex-grow: 1;
+.w-full{
+  width: 100%;
 }
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -709,32 +726,12 @@ video {
   align-items: center;
 }
 
-.justify-start{
-  justify-content: flex-start;
-}
-
 .justify-center{
   justify-content: center;
 }
 
-.gap-5{
-  gap: 1.25rem;
-}
-
-.gap-\[1rem\]{
+.gap-4{
   gap: 1rem;
-}
-
-.gap-\[1\.5rem\]{
-  gap: 1.5rem;
-}
-
-.gap-\[2rem\]{
-  gap: 2rem;
-}
-
-.gap-\[1\.25rem\]{
-  gap: 1.25rem;
 }
 
 .gap-\[0\.75rem\]{
@@ -747,22 +744,16 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.overflow-auto{
-  overflow: auto;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-md{
@@ -773,9 +764,24 @@ video {
   border-width: 1px;
 }
 
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-primary-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 62 138 / var(--tw-bg-opacity));
 }
 
 .bg-primary-400{
@@ -793,29 +799,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-primary-200{
+.bg-black{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 119 182 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-primary-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 62 138 / var(--tw-bg-opacity));
-}
-
-.bg-secondary-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 204 143 / var(--tw-bg-opacity));
-}
-
-.bg-secondary-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 235 216 / var(--tw-bg-opacity));
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 
 .object-cover{
@@ -828,24 +818,20 @@ video {
      object-position: center;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
 .p-4{
-  padding: 1rem;
-}
-
-.p-6{
-  padding: 1.5rem;
-}
-
-.p-\[0\.25rem\]{
-  padding: 0.25rem;
-}
-
-.p-\[1rem\]{
   padding: 1rem;
 }
 
 .p-8{
   padding: 2rem;
+}
+
+.p-\[1rem\]{
+  padding: 1rem;
 }
 
 .px-3{
@@ -868,32 +854,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.pr-\[2rem\]{
-  padding-right: 2rem;
-}
-
-.pr-\[2\.5rem\]{
-  padding-right: 2.5rem;
-}
-
-.pr-\[3rem\]{
-  padding-right: 3rem;
-}
-
-.pr-\[3\.5rem\]{
-  padding-right: 3.5rem;
-}
-
-.pr-\[4rem\]{
-  padding-right: 4rem;
-}
-
 .pr-\[5rem\]{
   padding-right: 5rem;
-}
-
-.pl-\[3rem\]{
-  padding-left: 3rem;
 }
 
 .text-center{
@@ -916,64 +878,71 @@ video {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.text-\[5rem\]{
-  font-size: 5rem;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-\[2rem\]{
-  font-size: 2rem;
+.text-\[1\.25rem\]{
+  font-size: 1.25rem;
 }
 
 .text-\[1rem\]{
   font-size: 1rem;
 }
 
-.text-\[1\.5rem\]{
-  font-size: 1.5rem;
-}
-
-.text-\[1\.25rem\]{
-  font-size: 1.25rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[2\.5rem\]{
-  font-size: 2.5rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-\[3rem\]{
   font-size: 3rem;
 }
 
-.text-\[1\.15rem\]{
-  font-size: 1.15rem;
+.text-\[5rem\]{
+  font-size: 5rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-\[2rem\]{
+  font-size: 2rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-\[1\.5rem\]{
+  font-size: 1.5rem;
 }
 
 .font-bold{
   font-weight: 700;
 }
 
-.leading-relaxed{
-  line-height: 1.625;
+.font-semibold{
+  font-weight: 600;
+}
+
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-gray-800{
@@ -986,9 +955,9 @@ video {
   color: rgb(2 62 138 / var(--tw-text-opacity));
 }
 
-.text-white{
+.text-primary-50{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(144 224 239 / var(--tw-text-opacity));
 }
 
 .text-secondary-800{
@@ -996,9 +965,27 @@ video {
   color: rgb(51 51 51 / var(--tw-text-opacity));
 }
 
-.text-gray-700{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-primary-100{
+  --tw-text-opacity: 1;
+  color: rgb(0 180 216 / var(--tw-text-opacity));
+}
+
+.text-primary-200{
+  --tw-text-opacity: 1;
+  color: rgb(0 119 182 / var(--tw-text-opacity));
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
+.opacity-50{
+  opacity: 0.5;
 }
 
 .shadow-md{
@@ -1007,18 +994,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+.transition-opacity{
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .placeholder\:font-body::-moz-placeholder{
@@ -1029,9 +1012,8 @@ video {
   font-family: Roboto;
 }
 
-.hover\:bg-blue-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+.hover\:flex:hover{
+  display: flex;
 }
 
 .hover\:bg-primary-400:hover{
@@ -1039,13 +1021,33 @@ video {
   background-color: rgb(3 4 94 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-200:hover{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
+.hover\:text-primary-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(3 4 94 / var(--tw-text-opacity));
+}
+
 .hover\:underline:hover{
   text-decoration-line: underline;
+}
+
+.hover\:opacity-100:hover{
+  opacity: 1;
+}
+
+.hover\:shadow-lg:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .focus\:outline-none:focus{
@@ -1053,24 +1055,46 @@ video {
   outline-offset: 2px;
 }
 
+.group:hover .group-hover\:opacity-100{
+  opacity: 1;
+}
+
+.group:hover .group-hover\:opacity-75{
+  opacity: 0.75;
+}
+
 @media (min-width: 768px){
+  .md\:col-span-1{
+    grid-column: span 1 / span 1;
+  }
+
   .md\:w-1\/2{
     width: 50%;
   }
 
-  .md\:flex-row{
-    flex-direction: row;
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:col-span-1{
+    grid-column: span 1 / span 1;
   }
 
-  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
