--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,53 @@
 {{#if user}}
-    <nav class="flex space-x-4 mb-4 w-full bg-primary-400 p-[1rem] flex items-center justify-center text-[1.25rem]">
-        <a href="/following" class="text-white font-head font-bold">Following</a>
-        <a href="/discover" class="text-white font-head font-bold">Discover</a>
-        <a href="/search" class="text-white font-head font-bold">Search</a>
-        <a href="/you" class="text-white font-head font-bold">You</a>
-    </nav>
 
-    <a href="/make-post" class="text-primary-500 hover:underline">Write a Story!</a>
+<nav class="flex items-center justify-center w-full bg-primary-400 py-4 text-[1.25rem]">
+    <a href="/following" class="text-white font-head font-bold mx-[3rem]">Following</a>
+    <a href="/search" class="text-white font-head font-bold mx-[3rem]">Search</a>
+    <a href="/you" class="text-white font-head font-bold mx-[3rem]">You</a>
+</nav>
+
+<div class="grid grid-cols-3 gap-4">
+    {{#each posts}}
+        <div onclick="location.href='/story/{{this._id}}';" class="relative p-4 group flex items-center">
+            <img src="{{this.images.[0]}}" alt="Post Image">
+            <div class="opacity-0 bg-black text-white p-2 absolute inset-0 flex items-center justify-center group-hover:opacity-75 transition-opacity duration-300">
+                <div>
+                    <h3 class="text-[3rem] text-center font-bold font-head">{{this.title}}</h3>
+                    <h3 class="text-[2rem] text-center font-head">{{this.location}}</h3>
+                    <h3 class="text-[1rem] text-center font-body">By @{{this.author.username}}</h3>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+</div>
+
+{{!-- <div class="my-4 mx-2">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4">
+        {{#each posts}}
+            <div class="md:col-span-1 lg:col-span-1">
+                <div onclick="location.href='/story/{{this._id}}';" class="cursor-pointer border border-gray-200 rounded-lg hover:shadow-lg bg-white post p-4">
+                    <div class="flex">
+                        <div class="w-2/3 mr-4">
+                            <h2 class="text-xl font-semibold text-blue-500">{{this.title}}</h2>
+                            <p class="text-gray-700"><a class="hover:text-primary-400" href="/u/{{author._id}}">{{author.username}}</a></p>
+                            <p class="text-gray-600">Posted on: {{this.timestamp}}</p>
+                            <p class="text-gray-600">Likes: {{this.likes.length}}</p>
+                        </div>
+                        <div class="w-1/3 relative w-[10rem] h-[10rem]">
+                            {{#if this.images.length}}
+                                <img class="object-cover object-center w-full h-full rounded-lg" src="{{this.images.[0]}}" alt="Image">
+                            {{/if}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
+    </div>
+</div> --}}
+
+
+
+<a href="/make-post" class="block text-primary-500 hover:underline text-center p-4">Write a Story!</a>
 
 {{else}}
 
