--- a/views/likes.hbs
+++ b/views/likes.hbs
@@ -1,13 +1,36 @@
+<nav class="flex items-center justify-center w-full bg-primary-400 py-4 text-[1.25rem]">
+    <a href="/following" class="text-white font-head font-bold mx-[3rem]">Following</a>
+    <a href="/search" class="text-white font-head font-bold mx-[3rem]">Search</a>
+    <a href="/you" class="text-white font-head font-bold mx-[3rem]">You</a>
+</nav>
+
 {{#if likes.length}}
+
     <h2>Liked Posts</h2>
-    {{#each likes}}
-        <div onclick = "location.href = '/story/{{this._id}}';" style="cursor: pointer;">
-            title: {{this.title}}
-            location: {{this.location}}
-            posted on: {{this.timestamp}}
-            likes: {{this.likes.length}}
+
+    <div class="my-4 mx-2">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4">
+            {{#each posts}}
+                <div class="md:col-span-1 lg:col-span-1">
+                    <div onclick="location.href='/story/{{this._id}}';" class="cursor-pointer border border-gray-200 rounded-lg hover:shadow-lg bg-white post p-4">
+                        <div class="flex">
+                            <div class="w-2/3 mr-4">
+                                <h2 class="text-xl font-semibold text-blue-500">{{this.title}}</h2>
+                                <p class="text-gray-700"><a class="hover:text-primary-400" href="/u/{{author._id}}">{{author.username}}</a></p>
+                                <p class="text-gray-600">Posted on: {{this.timestamp}}</p>
+                                <p class="text-gray-600">Likes: {{this.likes.length}}</p>
+                            </div>
+                            <div class="w-1/3 relative w-[10rem] h-[10rem]">
+                                {{#if this.images.length}}
+                                    <img class="object-cover object-center w-full h-full rounded-lg" src="{{this.images.[0]}}" alt="Image">
+                                {{/if}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
         </div>
-    {{/each}}
+    </div>
 {{else}}
     <h2>Like posts to see them here.</h2>
 {{/if}}
