--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -552,13 +552,13 @@ video {
   margin: 2rem;
 }
 
-.m-\[1rem\]{
-  margin: 1rem;
+.m-auto{
+  margin: auto;
 }
 
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.mx-\[15rem\]{
+  margin-left: 15rem;
+  margin-right: 15rem;
 }
 
 .mx-\[3rem\]{
@@ -576,22 +576,13 @@ video {
   margin-bottom: 1rem;
 }
 
-.mx-\[10rem\]{
-  margin-left: 10rem;
-  margin-right: 10rem;
-}
-
-.mx-\[15rem\]{
-  margin-left: 15rem;
-  margin-right: 15rem;
+.my-\[2rem\]{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .mb-0{
   margin-bottom: 0px;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 
 .mb-4{
@@ -602,16 +593,20 @@ video {
   margin-bottom: 2rem;
 }
 
+.ml-4{
+  margin-left: 1rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
 
-.mr-4{
-  margin-right: 1rem;
-}
-
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-\[0\.75rem\]{
+  margin-top: 0.75rem;
 }
 
 .mt-\[1rem\]{
@@ -620,6 +615,30 @@ video {
 
 .mt-\[2rem\]{
   margin-top: 2rem;
+}
+
+.mb-\[1rem\]{
+  margin-bottom: 1rem;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
+}
+
+.mr-\[2rem\]{
+  margin-right: 2rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mr-\[1rem\]{
+  margin-right: 1rem;
 }
 
 .block{
@@ -638,20 +657,12 @@ video {
   display: contents;
 }
 
-.hidden{
-  display: none;
-}
-
 .h-\[10rem\]{
   height: 10rem;
 }
 
 .h-\[20px\]{
   height: 20px;
-}
-
-.h-\[5px\]{
-  height: 5px;
 }
 
 .h-\[calc\(100vh-10rem\)\]{
@@ -662,20 +673,16 @@ video {
   height: 100%;
 }
 
+.h-\[15px\]{
+  height: 15px;
+}
+
+.h-auto{
+  height: auto;
+}
+
 .w-1\/2{
   width: 50%;
-}
-
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-\[10rem\]{
-  width: 10rem;
 }
 
 .w-\[20px\]{
@@ -686,10 +693,6 @@ video {
   width: 50%;
 }
 
-.w-\[5px\]{
-  width: 5px;
-}
-
 .w-\[75\%\]{
   width: 75%;
 }
@@ -698,12 +701,36 @@ video {
   width: 100%;
 }
 
-.cursor-pointer{
-  cursor: pointer;
+.w-2\/3{
+  width: 66.666667%;
 }
 
-.grid-cols-1{
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.w-1\/4{
+  width: 25%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-\[15px\]{
+  width: 15px;
+}
+
+.w-2{
+  width: 0.5rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
+.flex-1{
+  flex: 1 1 0%;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .grid-cols-2{
@@ -726,8 +753,24 @@ video {
   align-items: center;
 }
 
+.justify-end{
+  justify-content: flex-end;
+}
+
 .justify-center{
   justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
+}
+
+.justify-evenly{
+  justify-content: space-evenly;
 }
 
 .gap-4{
@@ -744,8 +787,16 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.overflow-hidden{
-  overflow: hidden;
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .rounded{
@@ -760,18 +811,42 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-l-md{
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.rounded-r-md{
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
 .border{
   border-width: 1px;
 }
 
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.bg-\[\#0a0a0a\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -799,13 +874,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-black{
+.bg-blue-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
+.bg-yellow-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -854,6 +930,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .pr-\[5rem\]{
   padding-right: 5rem;
 }
@@ -878,12 +959,24 @@ video {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.text-\[0\.75rem\]{
+  font-size: 0.75rem;
+}
+
 .text-\[1\.25rem\]{
   font-size: 1.25rem;
 }
 
+.text-\[1\.5rem\]{
+  font-size: 1.5rem;
+}
+
 .text-\[1rem\]{
   font-size: 1rem;
+}
+
+.text-\[2rem\]{
+  font-size: 2rem;
 }
 
 .text-\[3rem\]{
@@ -904,17 +997,13 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[2rem\]{
-  font-size: 2rem;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.text-\[1\.5rem\]{
-  font-size: 1.5rem;
+.text-\[4rem\]{
+  font-size: 4rem;
 }
 
 .font-bold{
@@ -925,24 +1014,9 @@ video {
   font-weight: 600;
 }
 
-.text-blue-500{
+.text-black{
   --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-800{
@@ -950,14 +1024,19 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.text-primary-200{
+  --tw-text-opacity: 1;
+  color: rgb(0 119 182 / var(--tw-text-opacity));
+}
+
 .text-primary-300{
   --tw-text-opacity: 1;
   color: rgb(2 62 138 / var(--tw-text-opacity));
 }
 
-.text-primary-50{
+.text-primary-400{
   --tw-text-opacity: 1;
-  color: rgb(144 224 239 / var(--tw-text-opacity));
+  color: rgb(3 4 94 / var(--tw-text-opacity));
 }
 
 .text-secondary-800{
@@ -970,22 +1049,17 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-primary-100{
+.text-gray-700{
   --tw-text-opacity: 1;
-  color: rgb(0 180 216 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-primary-200{
-  --tw-text-opacity: 1;
-  color: rgb(0 119 182 / var(--tw-text-opacity));
+.text-\[1re\2c \]{
+  color: 1re,;
 }
 
 .opacity-0{
   opacity: 0;
-}
-
-.opacity-50{
-  opacity: 0.5;
 }
 
 .shadow-md{
@@ -996,6 +1070,12 @@ video {
 
 .transition-opacity{
   transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all{
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1012,10 +1092,6 @@ video {
   font-family: Roboto;
 }
 
-.hover\:flex:hover{
-  display: flex;
-}
-
 .hover\:bg-primary-400:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(3 4 94 / var(--tw-bg-opacity));
@@ -1026,28 +1102,34 @@ video {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-blue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-200:hover{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.hover\:text-primary-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(3 4 94 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover{
   text-decoration-line: underline;
 }
 
-.hover\:opacity-100:hover{
-  opacity: 1;
+.hover\:shadow-md:hover{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-lg:hover{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.focus\:border-blue-300:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -1055,8 +1137,10 @@ video {
   outline-offset: 2px;
 }
 
-.group:hover .group-hover\:opacity-100{
-  opacity: 1;
+.focus\:ring:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .group:hover .group-hover\:opacity-75{
@@ -1064,16 +1148,8 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:col-span-1{
-    grid-column: span 1 / span 1;
-  }
-
   .md\:w-1\/2{
     width: 50%;
-  }
-
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-cols-3{
@@ -1082,18 +1158,6 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:col-span-1{
-    grid-column: span 1 / span 1;
-  }
-
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
