--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,23 +1,68 @@
-{{#if own}}
-    <a href="/logout">Logout</a>
-    <a href="/edit">Edit Profile</a>
-    <a href="/delete">Delete Profile</a>
-    <a href="/bookmarked">Bookmarks</a>
-    <a href="/liked">Likes</a>
-{{else}}
-    {{#if following}}
-        <a href="/follow/{{user._id}}">Unfollow</a>
-    {{else}}
-        <a href="/follow/{{user._id}}">Follow</a>
-    {{/if}}
-{{/if}}
+<nav class="flex items-center justify-center w-full bg-primary-400 py-4 text-[1.25rem]">
+    <a href="/following" class="text-white font-head font-bold mx-[3rem]">Following</a>
+    <a href="/search" class="text-white font-head font-bold mx-[3rem]">Search</a>
+    <a href="/you" class="text-white font-head font-bold mx-[3rem]">You</a>
+</nav>
 
-{{#each stories}}
-    <div onclick = "location.href = '/story/{{this._id}}';" style="cursor: pointer;">
-        title: {{this.title}}
-        location: {{this.location}}
-        posted on: {{this.timestamp}}
-        likes: {{this.likes.length}}
+<div class="py-4 space-y-4 flex flex-col items-center justify-center">
+
+  <div class="flex items-center mb-4">
+    <h1 class="text-[4rem] font-bold font-head">{{user.username}}</h1>
+  </div>
+
+  <div class="flex w-1/3 justify-evenly">
+
+    <div class="flex flex-col items-center">
+      <h1 class="text-[3rem] font-head">{{stories.length}}</h1>
+      <p class="text-[1rem] text-gray-700 font-body">Stories</p>
     </div>
-{{/each}}
 
+    <div class="flex flex-col items-center">
+      <h1 class="text-[3rem] font-head">{{numFollowing}}</h1>
+        <p class="text-[1rem] text-gray-700 font-body">Following</p>
+    </div>
+
+    <div class="flex flex-col items-center">
+      <h1 class="text-[3rem] font-head">{{numFollowers}}</h1>
+      <p class="text-[1rem] text-gray-700 font-body">Followers</p>
+    </div>
+  </div>
+
+  {{#if own}}
+
+  <div class="flex space-x-4">
+      <a href="/bookmarked" class="p-2 bg-primary-300 text-white rounded">Bookmarks</a>
+      <a href="/liked" class="p-2 bg-primary-300 text-white rounded">Likes</a>
+      <a href="/logout" class="p-2 bg-primary-300 text-white rounded">Logout</a>
+      <a href="/delete" class="p-2 bg-primary-300 text-white rounded">Delete Profile</a>
+  </div>
+
+  <a href="/make-post" class="block text-primary-500 hover:underline text-center p-4">Write a Story!</a>
+
+  {{else}}
+
+  <div class="space-y-2">
+      {{#if following}}
+          <a href="/follow/{{user._id}}" class="p-2 bg-red-500 text-white rounded">Unfollow</a>
+      {{else}}
+          <a href="/follow/{{user._id}}" class="p-2 bg-primary-300 text-white rounded">Follow</a>
+      {{/if}}
+  </div>
+
+  {{/if}}
+
+  <div class="grid grid-cols-3 gap-4">
+    {{#each stories}}
+        <div onclick="location.href='/story/{{this._id}}';" class="relative p-4 group flex items-center">
+            <img src="{{this.images.[0]}}" alt="Post Image">
+            <div class="opacity-0 bg-black text-white p-2 absolute inset-0 flex items-center justify-center group-hover:opacity-75 transition-opacity duration-300">
+                <div>
+                    <h3 class="text-[3rem] text-center font-bold font-head">{{this.title}}</h3>
+                    <h3 class="text-[2rem] text-center font-head">{{this.location}}</h3>
+                    <h3 class="text-[1rem] text-center font-body">By @{{this.author.username}}</h3>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+  </div>
+</div>
